@@ -33,13 +33,14 @@ AC_TRY_RUN([#include <sys/types.h>
 #define base_addr 0x01000000
 int main ()
 { int shmid, i; char* addr; char* result;
-  if ((shmid = shmget(IPC_PRIVATE,segsize,0400)) < 0) exit(1);
+  if ((shmid = shmget(IPC_PRIVATE,segsize,0400)) < 0)
+    return 1;
   for (i=0, addr = (char*)0x01000000; i<attaches; i++, addr += segsize)
     if ((result = (char*)shmat(shmid,addr,SHM_RDONLY)) == (char*)(-1)) break;
   for (i=0, addr = (char*)0x01000000; i<attaches; i++, addr += segsize)
     shmdt(addr);
   shmctl(shmid,IPC_RMID,0);
-  exit(result == (char*)(-1));
+  return (result == (char*)(-1));
 }], cl_cv_sys_shm_works=yes, cl_cv_sys_shm_works=no,
 dnl When cross-compiling, don't assume anything.
 cl_cv_sys_shm_works="guessing no")
